[gd_scene load_steps=23 format=2]

[ext_resource path="res://Unit/Dank Druid/Animation/DankDruid.png" type="Texture" id=1]
[ext_resource path="res://Unit/Dank Druid/Animation/Idle2.png" type="Texture" id=2]
[ext_resource path="res://Unit/Dank Druid/Animation/Idle3.png" type="Texture" id=3]
[ext_resource path="res://Unit/Dank Druid/Animation/GreenMagic1.png" type="Texture" id=4]
[ext_resource path="res://Unit/Dank Druid/Animation/GreenMagic2.png" type="Texture" id=5]
[ext_resource path="res://Unit/Dank Druid/Animation/GreenMagic3.png" type="Texture" id=6]
[ext_resource path="res://Unit/Dank Druid/Animation/GreenMagic4.png" type="Texture" id=7]
[ext_resource path="res://Unit/Dank Druid/Animation/ShiftForward.png" type="Texture" id=8]
[ext_resource path="res://Unit/Dank Druid/Animation/Defend1.png" type="Texture" id=9]
[ext_resource path="res://Unit/Dank Druid/Animation/Defend2.png" type="Texture" id=10]
[ext_resource path="res://Unit/Dank Druid/Animation/Defend3.png" type="Texture" id=11]
[ext_resource path="res://Unit/Dank Druid/Animation/Defend4.png" type="Texture" id=12]
[ext_resource path="res://Unit/Dank Druid/Animation/ShiftBack.png" type="Texture" id=13]
[ext_resource path="res://Unit/Unit.gd" type="Script" id=14]
[ext_resource path="res://Unit/Area2D.gd" type="Script" id=15]
[ext_resource path="res://Action/ActionCatalogue.tscn" type="PackedScene" id=16]
[ext_resource path="res://Stance/StanceCatalogue.tscn" type="PackedScene" id=17]
[ext_resource path="res://Status/StatusCatalogue.tscn" type="PackedScene" id=18]
[ext_resource path="res://Fonts/QuickStatsFont.tres" type="DynamicFont" id=19]
[ext_resource path="res://Unit/HPChange.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": true,
"name": "Melee",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "ShiftForward",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Defend",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "ShiftBack",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": true,
"name": "GreenMagic",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

resource_local_to_scene = true
custom_solver_bias = 0.0
extents = Vector2( 170, 190 )
_sections_unfolded = [ "Resource" ]

[node name="Unit" type="AnimatedSprite" index="0"]

frames = SubResource( 1 )
animation = "Placeholder"
script = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

modulate = Color( 0.297852, 0.625, 0.302963, 1 )
self_modulate = Color( 0.249023, 0.53125, 0.253433, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="MeleeTween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="XPTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="ActionCatalogue" parent="." index="4" instance=ExtResource( 16 )]

visible = false

[node name="StanceCatalogue" parent="." index="5" instance=ExtResource( 17 )]

visible = false

[node name="StatusCatalogue" parent="." index="6" instance=ExtResource( 18 )]

visible = false

[node name="HPChange" type="Label" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 19 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 20 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[connection signal="animation_finished" from="." to="." method="_on_Unit_animation_finished"]

[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_Area2D_mouse_exited"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="tween_completed" from="MeleeTween" to="." method="_on_MeleeTween_tween_completed"]


